flux/matchering/manifests/matchering.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matchering
  namespace: matchering
spec:
  selector:
    matchLabels:
      app: matchering
  replicas: 1
  template:
    metadata:
      labels:
        app: matchering
    spec:
      containers:
      - name: matchering
        image: sergree/matchering-web:0.1.7
        ports:
        - containerPort: 8360
        resources:
          requests:
            memory: 500Mi
          limits:
            memory: 1Gi
        volumeMounts:
        - mountPath: /app/data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: matchering
---
apiVersion: v1
kind: Service
metadata:
  name: matchering
  namespace: matchering
spec:
  ports:
  - port: 80
    targetPort: 8360
    protocol: TCP
  selector:
    app: matchering
