flux/matchering/manifests/authpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
 name: matchering
 namespace: matchering
spec:
  action: ALLOW
  targetRefs:
  - kind: Service
    group: ""
    name: matchering
  rules:
  - from:
    - source:
        remoteIpBlocks:
        - "${publicIp:=0.0.0.0/0}"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-inbound-http
  namespace: matchering
spec:
  podSelector:
    matchLabels:
      app: matchering
  ingress:
  - ports:
    - port: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-hbone
  namespace: matchering
spec:
  podSelector: {}
  ingress:
  - ports:
    - port: 15008
      protocol: TCP
  egress:
  - ports:
    - port: 15008
      protocol: TCP
